added a creative group and added a ingot

--- a/src/main/resources/assets/magicmore/lang/en_us.json
+++ b/src/main/resources/assets/magicmore/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.magicmore.bob": "Bob",
   "item.magicmore.fantasy_ingot": "Phantasium Ingot",
-  "itemgroup.magic": "Magic "
+  "itemgroup.magic": "Magic",
+  "itemgroup.more": "More"
 }
