--- a/src/main/resources/assets/magicmore/lang/en_us.json
+++ b/src/main/resources/assets/magicmore/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "item.magicmore.bob": "Bob",
   "item.magicmore.fantasy_ingot": "Phantasium Ingot",
-  "itemgroup.magic": "Magic",
-  "itemgroup.more": "More"
+  "magicmore.itemgroup.magic": "Magic",
+  "magicmore.itemgroup.more": "More"
 }
