added: Dev BLock Crafting recipe and textures for the dense brick, denser brick and superdense brick

--- a/src/main/resources/assets/magicmore/lang/en_us.json
+++ b/src/main/resources/assets/magicmore/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.magicmore.bob": "Bob",
   "item.magicmore.fantasy_ingot": "Phantasium Ingot",
   "magicmore.itemgroup.magic": "Magic",
-  "magicmore.itemgroup.more": "More"
+  "magicmore.itemgroup.more": "More",
+  "block.magicmore.dev_block": "Dev Block"
 }
