--- a/src/main/resources/assets/magicmore/lang/en_us.json
+++ b/src/main/resources/assets/magicmore/lang/en_us.json
@@ -1,6 +1,9 @@
 {
   "item.magicmore.bob": "Bob",
   "item.magicmore.fantasy_ingot": "Phantasium Ingot",
+  "item.magicmore.dense_brick": "Dense Brick",
+  "item.magicmore.denser_brick": "Denser Brick",
+  "item.magicmore.superdense_brick": "Superdensed Brick",
   "magicmore.itemgroup.magic": "Magic",
   "magicmore.itemgroup.more": "More",
   "block.magicmore.dev_block": "Dev Block"
