MANY CRAFTING SHIT

--- a/src/main/resources/assets/magicmore/lang/en_us.json
+++ b/src/main/resources/assets/magicmore/lang/en_us.json
@@ -6,5 +6,5 @@
   "item.magicmore.superdense_brick": "Superdensed Brick",
   "magicmore.itemgroup.magic": "Magic",
   "magicmore.itemgroup.more": "More",
-  "block.magicmore.dev_block": "Dev Block"
+  "block.magicmore.jumper_block": "Block of Jump Boost"
 }
