--- a/src/main/resources/assets/magicmore/lang/en_us.json
+++ b/src/main/resources/assets/magicmore/lang/en_us.json
@@ -1,10 +1,12 @@
 {
   "item.magicmore.bob": "Bob",
+  "item.magicmore.metal_detector": "Metal Detector Wand",
   "item.magicmore.fantasy_ingot": "Phantasium Ingot",
   "item.magicmore.dense_brick": "Dense Brick",
   "item.magicmore.denser_brick": "Denser Brick",
   "item.magicmore.superdense_brick": "Superdensed Brick",
   "magicmore.itemgroup.magic": "Magic",
   "magicmore.itemgroup.more": "More",
+  "magicmore.tooltip.metaldetector": "Right click on a block to scan for valuables!",
   "block.magicmore.jumper_block": "Block of Jump Boost"
 }
