--- a/src/main/resources/assets/magicmore/lang/en_us.json
+++ b/src/main/resources/assets/magicmore/lang/en_us.json
@@ -9,6 +9,7 @@
   "magicmore.itemgroup.more": "More",
   "magicmore.tooltip.metaldetector": "Right click on a block to scan for valuables!",
   "block.magicmore.jumper_block": "Block of Jump Boost",
+  "block.magicmore.end_tp": "Ender Port",
   "item.magicmore.invisiball": "Invisibility dipped Magic Ball",
   "item.magicmore.magic_ball": "Blank Magic Ball"
 
