changed tags and added ModBlocks.BUILDING_HAY

--- a/src/main/resources/assets/magicmore/lang/en_us.json
+++ b/src/main/resources/assets/magicmore/lang/en_us.json
@@ -10,6 +10,7 @@
   "magicmore.tooltip.metaldetector": "Right click on a block to scan for valuables!",
   "block.magicmore.jumper_block": "Block of Jump Boost",
   "block.magicmore.end_tp": "Ender Port",
+  "block.magicmore.building_hay": "Building Hay Bale",
   "item.magicmore.invisiball": "Invisibility dipped Magic Ball",
   "item.magicmore.magic_ball": "Blank Magic Ball"
 
